--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #ceddf5;
 }
 
 .App-logo {
@@ -13,7 +14,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,10 +23,33 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} */
+
+ .rbc-btn-group button {
+  background-color: #61b3fb!important;
+  color:white !important; /* Default background color */
+}
+
+.rbc-btn-group button.rbc-active {
+  background-color: white!important;
+  color:#61b3fb!important; /* Background color when button is active */
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.logo{
+  width: 100px;
+  height: 40px;
+  margin-right: -20px;
+}
+Nav.Link{
+  margin-left: 10px;
+}
+
+.user-nav {
+  margin-left: auto;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +59,6 @@
   to {
     transform: rotate(360deg);
   }
+
+
 }
