--- a/src/MemberActivities.css
+++ b/src/MemberActivities.css
@@ -17,29 +17,29 @@
   .member-page .task {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    background-color: #73f5f5;
+    background-color: #FF4081;
     margin: 10px;
     
   }
   .member-page .notes {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    background-color: #73b2f5;
+    background-color: #F39C12;
     margin: 15px;
   }
   .member-page .logs {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    background-color: #89f573;
+    background-color: #16A085;
     margin: 15px;
   }
 
   .member-page .card-text {
     font-size: 30px;
   }
-  .task-table{
+  .task-table-member{
     width: 97%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
     padding:8px ;
     margin-top: 15px;
@@ -48,28 +48,28 @@
   }
   
   /* Header styles */
-  .task-table th {
-    background-color: #f2f2f2;
+  .task-table-member th {
+    background-color: #212A34 !important;
     padding: 10px;
     text-align: center; /* Center-align header text */
     color:rgb(58, 190, 242);
   }
   
   /* Data row styles */
-  .task-table td {
+  .task-table-member td {
     padding: 10px;
     text-align: center; /* Center-align data text */
-    color: black;
+    color: white;
   }
   
   /* Fixed row height */
-  .task-table tr {
+  .task-table-member tr {
     height: 50px; /* Set height for each row */
-    border: 1px solid #ddd;
+    background-color: #2c3e50;
   }
   
   /* Optional: Styling the button */
-  .task-table button {
+  .task-table-member button {
     padding: 5px 10px;
     background-color: #4CAF50;
     color: white;
@@ -77,6 +77,18 @@
     cursor: pointer;
   }
   
-  .task-table button:hover {
+  .task-table-member button:hover {
     background-color: #45a049;
+  }
+  th, td {
+    padding: 12px;
+    text-align: left !important;
+    border-bottom: 1px solid #34495E;  /* Slate Blue borders */
+  }
+  .Accordion-Item{
+    background-color: red;
+  }
+  .button-back{
+    background-color: #34495E;  /* Deep Charcoal button */
+      color: #ECF0F1;  /* Light text */
   }
