--- a/src/CalendarActivities.css
+++ b/src/CalendarActivities.css
@@ -1,15 +1,15 @@
 .task-table{
     width: 100%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
     padding:8px ;
-  
+    
     border-collapse: collapse; /* Remove space between cells */
   }
   
   /* Header styles */
   .task-table th {
-    background-color: #f2f2f2;
+    background-color: #212A34 !important;
     padding: 10px;
     text-align: center; /* Center-align header text */
     
@@ -19,13 +19,14 @@
   .task-table td {
     padding: 10px;
     text-align: center; /* Center-align data text */
-    
+    color: #ffffff !important;
   }
   
   /* Fixed row height */
   .task-table tr {
     height: 50px; /* Set height for each row */
-    border: 1px solid #ddd;
+    
+    background-color: #2c3e50;
   }
   
   /* Optional: Styling the button */
@@ -40,13 +41,20 @@
   .task-table button:hover {
     background-color: #45a049;
   }
+  th, td {
+    padding: 12px !important;
+    text-align: left;
+    border-bottom: 1px solid #34495E;  /* Slate Blue borders */
+  }
   .weather{
-    background-color: #ffffff;
+    background-color: #212A34;
+    border-radius: 8px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.7);
     margin-top: 50px;
     padding-top: 25px;
   }
   .weather h6{
-    color: black;
+    color: #ffffff;
     
   }
   .filtered-icon {
@@ -54,3 +62,14 @@
     .filtered-icon {
       filter: grayscale(100%) brightness(200%) sepia(100%);
     }
+    .nav-calendar{
+      background-color:#212A34;
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.7);
+    }
+    .nav-link.active {
+      background-color: #34495E !important;
+    }
+    .nav-link{
+      border: #232323 !important;
+    }
+    
